Trying to fix the header spacing. This may take a few commits since it only shows on mobile so it is hard to recreate.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 @import 'content-body';
 
 html, body {
+  min-height: 700px;
   height: 100%;
 }
 
